# mcu

./: .gitignore  Cargo.toml  PLAN.md  README.md  current.mpl  findings.md  interval.mpl  test.mpl
docs/: keys.md
plan/: 01-layout-and-app-shell.md  02-modal-editor.md  03-chart-data-model.md  04-config-and-dataset-discovery.md  05-async-query-execution.md  06-mpl-diagnostics.md  07-completions.md  08-syntax-highlighting.md  09-ux-polish.md  10-mpl-feature-parity.md  11-viz-kinds-and-time-series-variants.md  12-statistic-and-top-list.md  13-pie-and-heatmap.md  14-table.md  15-log-stream.md  16-monitor-list-note-spacer.md  17-dashboard-file-format-and-crud.md  18-dashboard-grid-layout-and-editing.md  19-tile-shove-and-vim-clipboard.md  20-trace-settings.md  26-review-remediation.md  27-mouse-support.md
src/: app.rs  axiom.rs  axiom_tests.rs  cache.rs  chart.rs  cmdline_complete.rs  command.rs  completions.rs  config.rs  dashboard.rs  editor.rs  highlight.rs  history.rs  hover.rs  main.rs  motion.rs  mpl.rs  mpl_tests.rs  params.rs  settings.rs  share.rs  term.rs  ui.rs  unit.rs  viz.rs
src/app/: clipboard.rs  completions_impl.rs  dashboard.rs  dashboard_cmd.rs  editing.rs  ex_cmds.rs  fetch.rs  file_io.rs  helpers.rs  keys.rs  mod.rs  tests.rs  tile_layout.rs  tile_ops_shove.rs  types.rs
src/app/fetch/: dashboard.rs  discovery.rs  mod.rs  query.rs  trace.rs
src/app/keys/: cmdline.rs  dashboard.rs  editor.rs  mod.rs  mouse.rs  overlays.rs  panes.rs  trace.rs
src/app/tests/: apl.rs  cmdline.rs  completion.rs  dashboard.rs  editor.rs  focus.rs  legend.rs  misc.rs  mod.rs  mouse.rs  params.rs  query.rs  tile.rs  time.rs
src/axiom/: tests.rs
src/cache/: tests.rs
src/chart/: tests.rs
src/cmdline_complete/: tests.rs
src/command/: tests.rs
src/dashboard/: tests.rs
src/history/: tests.rs
src/ui/: editor.rs  grid.rs  help.rs  hover.rs  mod.rs  overlays.rs  params.rs  status.rs  tests.rs  time_picker.rs  topbar.rs  trace.rs
src/unit/: pragma.rs  tests.rs
src/viz/: heatmap.rs  mod.rs  pie.rs  statistic.rs  table.rs  tests.rs
tests/: ha_classify_probe.rs  ha_queries.txt
