[package]
name = "ax"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29", features = ["widget-calendar"] }
crossterm = "0.28"
anyhow = "1"
tui-textarea = { version = "0.7.0", features = ["crossterm"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde_json = "1.0.149"
axiom-rs = { version = "0.11.5", default-features = false, features = ["tokio", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
clap = { version = "4", features = ["derive", "wrap_help"] }
etcetera = "0.11"
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
mpl-lang = { version = "0.5.5", default-features = false, git = "https://github.com/axiomhq/mpl.git", tag = "v0.5.5" }
pest = "2.8.6"
# `mpl-language-server` is not published on crates.io; it only exists
# inside the mpl repo (`extra/mpl-language-server`, first shipped at
# v0.5.5). Pin both to the same git tag so they resolve against one
# consistent checkout instead of a local working tree.
mpl-language-server = { version = "0.5.5", git = "https://github.com/axiomhq/mpl.git", tag = "v0.5.5" }
miette = "7.6.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
nucleo-matcher = "0.3"
tempfile = "3.27"
parking_lot = "0.12"
# UCUM unit parsing + canonicalisation. Used for OTEL instrument unit
# handling (`By`, `KiBy`, `ms`, `Hz`, compound rates like `By/s`,
# annotations like `{request}`). We only consume parse + comparability
# + canonical-factor extraction; the wider FHIR-conversion surface is
# untouched.
octofhir-ucum = "0.5"
iso_currency = "0.5.3"
